--- a/log-in.html
+++ b/log-in.html
@@ -13,7 +13,7 @@
 <body>
     
      <main class="main--form">
-          <a href="./index.html" class="logo"><img src="./images/astronomy-logo.png" height="55" width="100"></a>
+          <a href="./index.html" class="logo"><img src="./images/astronomy-logo.png" height="55" width="100" alt="logo"></a>
         <h2 class="header2">Log in to check your deals</h2>
        
     <form action="#" method="post">
