--- a/sign-up.html
+++ b/sign-up.html
@@ -15,7 +15,7 @@
 <body>
 
     <main class="main--form">
-        <a href="./index.html" class="logo"><img src="./images/astronomy-logo.png" height="55" width="100"></a>
+        <a href="./index.html" class="logo"><img src="./images/astronomy-logo.png" height="55" width="100" alt="logo"></a>
         <h2 class="header2">Register to Get Advantage of Rare Deals!</h2>
        
     <form action="#" method="post">
