--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
              
             <div class="hero--content__intro">
                 <h1 class="header1">Explore the Universe with Cosmos Emporium</h1>
-                <a href="#" class="btn--primary">Shop Now</a>
+                <a href="./products.html" class="btn--primary">Shop Now</a>
             </div>
 
             </section>
