--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
         </a>
           
             <ul class="hidden-sm hidden-md">
-                  <li><a href="./about-us.html" class="about-us">About us</a></li>
+                  <li><a href="./about-us.html" >About us</a></li>
                 <li><a href="./products.html" class="products-links">Products</a></li>
                  <li><a href="./log-in.html">Log in</a></li>
                   <li><a href="./sign-up.html">Sign up</a></li>
