--- a/index.html
+++ b/index.html
@@ -176,18 +176,15 @@
             <ul>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="https://www.google.com">Contact Us</a></li>
             </ul>
           </nav>
 
           <nav class="footer__nav2" aria-label="Footer Navigation social media links">
             <ul>
-                <li><a href="https://x.com/?lang=en" aria-label="Twitter"></a>
-                    <i class="fa fa-twitter" aria-hidden="true"></i></li>
-                <li><a href="https://instagram.com" aria-label="Instagram"></a>
-                    <i class="fa fa-instagram" aria-hidden="true"></i></li>
-                <li><a href="https://facebook.com" aria-label="Facebook"></a>
-                    <i class="fa fa-facebook-f" aria-hidden="true"></i></li>
+                <li><a href="https://x.com/?lang=en" aria-label="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="https://instagram.com" aria-label="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="https://facebook.com" aria-label="Facebook"><i class="fa fa-facebook-f" aria-hidden="true"></i></a></li>
             </ul>
           </nav>
         </footer>
